navbar: Fix overlap with gear when search open.
This commit fixes the overlap of "X" icon with gear icon at smaller
view-ports for navbar as well as the overspill of the darker background
when search is open.

--- a/static/styles/media.scss
+++ b/static/styles/media.scss
@@ -189,8 +189,18 @@
         }
         .search_closed {
             .fa-search {
-                // prevents overlap of search icon with gear icon caused  by position:relative of search_box
+                // prevents overlap of search icon with gear icon caused by position:relative of search box
                 right: 129px;
+            }
+        }
+        #searchbox_legacy {
+            #search_query {
+                // prevents overlap of dark search background color with gear icon when search is open
+                width: calc(100% - 35px);
+            }
+            .navbar-search.expanded .search_button {
+                // aligns "x" icon with search box (and prevents overlap with gear icon)
+                margin-right: 45px;
             }
         }
     }
