--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -2216,7 +2216,7 @@ nav a .no-style {
         border-left: 1px solid hsl(0, 0%, 87.8%);
         .search_button {
             display: inline;
-            margin-right: 5px;
+            margin-right: 16px;
         }
         @media (max-width: 1165px) {
             width: calc(100% - 85px);
